--- a/css/qgis2web.css
+++ b/css/qgis2web.css
@@ -194,7 +194,7 @@
             position: absolute;
             top: 10px;
             left: 50px;
-            background: #ffcd4b;
+            background: #ffc700;
             border-radius: 5px;
             padding: 10px;
             box-shadow: 0 2px 6px rgba(0,0,0,0.3);
